# chatgpt-frontend

./: .eslintrc.cjs  .gitignore  AGENTS.md  ALGORITHM.md  API.md  ARCHITECTURE.md  FILE_STRUCTURE.md  FMUReverseEngineerApp.m  FMUReverseEngineerApp1.m  LICENSE  MODELS.md  README.md  SCHEMAS.md  VALIDATION.md  app.py  board.json  chance.json  community.json  engine.py  index.html  launch_dll_insight_studio.bat  main.js  main.py  main_gui.m  monopoly.js  monopoly.py  package.json  plot_results.py  preload.js  pyproject.toml  requirements.txt  rpg_map_studio.py  run.py  run_case.m  run_demo.py  run_gui.py  script.js  self_validate.m  settings.json  startup.m  (+4 more)
fmu_reverse_engineering/: .env.example  README.md  pyproject.toml
fmu_reverse_engineering/configs/: automatic_mode.yaml  default.yaml  manual_mode.yaml  model_zoo.yaml  semi_automatic_mode.yaml
fmu_reverse_engineering/docs/: architecture.md  workflow.md
fmu_reverse_engineering/scripts/: fit_models.py  inspect_fmu.py  run_pipeline.py
fmu_reverse_engineering/src/fmu_reverse_engineering/: __init__.py
fmu_reverse_engineering/src/fmu_reverse_engineering/analysis/: influence.py
fmu_reverse_engineering/src/fmu_reverse_engineering/cli/: main.py
fmu_reverse_engineering/src/fmu_reverse_engineering/core/: config.py  enums.py  exceptions.py  logging_utils.py  registry.py
fmu_reverse_engineering/src/fmu_reverse_engineering/data/: cleaner.py  feature_engineering.py
fmu_reverse_engineering/src/fmu_reverse_engineering/evaluation/: base.py  ranking.py
fmu_reverse_engineering/src/fmu_reverse_engineering/experiments/: base.py  designer.py
fmu_reverse_engineering/src/fmu_reverse_engineering/export/: json_export.py
fmu_reverse_engineering/src/fmu_reverse_engineering/fmu/: inspector.py
fmu_reverse_engineering/src/fmu_reverse_engineering/lut/: builder.py
fmu_reverse_engineering/src/fmu_reverse_engineering/models/: base.py  orchestration.py  registry.py  simple_models.py
fmu_reverse_engineering/src/fmu_reverse_engineering/regimes/: detector.py
fmu_reverse_engineering/src/fmu_reverse_engineering/runner/: fmu_runner.py
fmu_reverse_engineering/tests/: conftest.py
fmu_reverse_engineering/tests/unit/: test_ranking.py  test_registry.py
(+461 files in other folders)
