[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfdles"
version = "0.1.0"
description = "Educational 3D incompressible LES CFD solver in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pytest>=7.0"
]

[tool.setuptools]
packages = ["cfdles"]
