[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dll-insight-studio"
version = "1.0.0"
description = "DLL Insight Studio - Guided DLL model analysis desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pefile>=2023.2.7",
  "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
