[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-reverse-engineering"
version = "0.1.0"
description = "Platform for reverse engineering FMUs into interpretable and deployable surrogates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "sympy>=1.12",
  "networkx>=3.2",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "joblib>=1.3",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
fmu-re = "fmu_reverse_engineering.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
